WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
257564
REGRESSION(
264306@main
) [Cocoa] Moving to next video on YouTube.com while in PiP resizes video contents incorrectly
https://bugs.webkit.org/show_bug.cgi?id=257564
Summary
REGRESSION(264306@main) [Cocoa] Moving to next video on YouTube.com while in ...
Jer Noble
Reported
2023-05-31 13:30:20 PDT
REGRESSION(
264306@main
) [Cocoa] Moving to next video on YouTube.com while in PiP resizes video contents incorrectly
Attachments
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2023-05-31 13:30:28 PDT
<
rdar://problem/110026753
>
Jer Noble
Comment 2
2023-05-31 13:53:57 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/14554
EWS
Comment 3
2023-06-01 08:59:24 PDT
Committed
264795@main
(ab7221357173): <
https://commits.webkit.org/264795@main
> Reviewed commits have been landed. Closing PR #14554 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug