Source/WebCore/html/HTMLMediaElement.h
@@ -642,6 +642,8 @@ public:
 
     WEBCORE_EXPORT LayerHostingContextID layerHostingContextID();
     WEBCORE_EXPORT WebCore::FloatSize naturalSize();
+
+    FloatSize mediaPlayerVideoInlineSize() const override { return videoInlineSize(); }
     WEBCORE_EXPORT WebCore::FloatSize videoInlineSize() const;
     void setVideoInlineSizeFenced(const FloatSize&, const WTF::MachSendRight&);
     void updateMediaState();
@@ -1317,6 +1319,8 @@ private:
     bool m_userPrefersTextDescriptions { false };
     bool m_userPrefersExtendedDescriptions { false };
     bool m_changingSynthesisState { false };
+
+    FloatSize m_videoInlineSize { };
 
 #if !RELEASE_LOG_DISABLED
     RefPtr<Logger> m_logger;
